--- a/example/styles/style.css
+++ b/example/styles/style.css
@@ -45,11 +45,9 @@ img {
 }
 
 p {
-  font-size: 22px ;
+  font: 1em ;
   margin: 20px 20px 0px 20px;
 }
-
-
 
 /**
 * Styles for the header
@@ -58,11 +56,19 @@ p {
 #header {
   float: left;
   width: 100%;
-  margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 #header img {
   float: left;
+}
+
+/**
+* Styles for the instructions
+*/
+
+#instructions {
+  margin-left: 7px;
 }
 
 /**
@@ -72,7 +78,7 @@ p {
   border: 1px solid black;
   padding: 20px;
   float: left;
-  margin: 30px 20px;
+  margin: 30px 27px;
 }
 
 #puzzle div {
@@ -114,6 +120,7 @@ button::-moz-focus-inner {
 #puzzle .complete {
   background-color: green;
 }
+
 
 /**
 * Styles for the word list
